<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

        <variable
                name="viewmodel"
                type="com.example.cashbackexplorer.ui.viewmodel.LoginViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.LoginActivity">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_name"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:inputType="textPersonName"
                android:focusable="@{viewmodel.loading ? false : true}"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@id/login_main_text"
                android:id="@+id/login_name_edit"
                android:text="@={viewmodel.name}"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_email"
                android:id="@+id/login_email_edit"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:inputType="textEmailAddress"
                android:focusable="@{viewmodel.loading ? false : true}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_name_edit"
                android:layout_marginStart="8dp"
                android:text="@={viewmodel.email}"/>

        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login_sign_up"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:background="@color/colorPrimary"
                android:id="@+id/button"
                android:textColor="@android:color/white"
                android:enabled="@{!viewmodel.loading}"
                android:onClick="@{() -> viewmodel.proceedSignUp()}"/>


        <ProgressBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:id="@+id/progressBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:visibility="@{viewmodel.loading ? View.VISIBLE : View.GONE}"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginEnd="8dp"
                android:id="@+id/login_main_text"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="72dp"
                app:layout_constraintTop_toTopOf="parent"/>

    </android.support.constraint.ConstraintLayout>
</layout>