<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
                name="venue"
                type="com.example.cashbackexplorer.model.Venue"/>
    </data>

    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_sheet_parent"
            app:behavior_hideable="true"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
            android:padding="16dp"
            android:background="@android:color/white">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Name goes here"
                android:text="@{venue.name}"
                android:textSize="24sp"
                android:textStyle="bold"
                />

        <TextView
                android:text="@string/cashback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                android:textStyle="bold"/>

        <TextView
                android:text="@string/city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                android:layout_marginTop="8dp"
                android:textStyle="bold"/>

        <TextView
                android:text="@string/created_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                android:layout_marginTop="8dp"
                android:textStyle="bold"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView12"
                android:text="@{venue.getCashbackStr()}"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                android:layout_marginStart="32dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView13"
                android:text="@{venue.city}"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView12"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView15"
                android:text="@{venue.getCreator()}"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/textView13"/>

    </android.support.constraint.ConstraintLayout>
</layout>